# qwen3_tts_rs

./: .gitignore  CLAUDE.md  Cargo.toml  PORT_TCH_TO_MLX.md  README.md  TEST_PLAN.md  build.rs  install.sh
.github/workflows/: ci-new.yml  ci.yml  integration.yml  release.yml
demos/: README.md
examples/: test_weights.rs  tts_demo.rs  voice_clone_demo.rs
reference_audio/: elon_musk.txt  trump.txt
skills/: SKILL.md  bootstrap.sh  install.md
src/: audio.rs  audio_encoder.rs  config.rs  error.rs  inference.rs  layers.rs  lib.rs  model.rs  speaker_encoder.rs  tensor.rs  tokenizer.rs  types.rs  vocoder.rs  weights.rs
src/api/: chunking.rs  encode.rs  mod.rs  routes.rs  types.rs
src/backend/: mod.rs
src/backend/mlx/: array.rs  ffi.rs  io.rs  ops.rs  signal.rs  stream.rs
