[package]
name = "qwen3_tts"
version = "0.1.1"
edition = "2021"
authors = ["Michael Yuan <michael@secondstate.io>"]
description = "Rust port of Qwen3 TTS - Text-to-Speech model"
license = "Apache-2.0"
repository = "https://github.com/juntao/qwen3_tts_rs"
keywords = ["tts", "text-to-speech", "qwen", "ai", "machine-learning"]
categories = ["multimedia::audio", "science"]
exclude = ["models/", "*.wav", ".DS_Store"]

[dependencies]
# PyTorch bindings via libtorch (0.23 for PyTorch 2.10.0 compatibility)
# Only used with the tch-backend feature
tch = { version = "0.23", optional = true }

# Tokenization
tokenizers = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing
hound = "3.5"
rubato = "0.16"

# HTTP and file handling
base64 = "0.22"
url = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[features]
default = ["tch-backend"]
# Use libtorch/PyTorch as the computation backend (default)
tch-backend = ["dep:tch"]
# Use Apple MLX as the computation backend (macOS Apple Silicon only).
# Requires the mlx-c git submodule: `git submodule update --init --recursive`
mlx = []

[build-dependencies]
cmake = "0.1"

[[bin]]
name = "tts"
path = "src/bin/tts.rs"

[[bin]]
name = "voice_clone"
path = "src/bin/voice_clone.rs"

[dev-dependencies]
tempfile = "3.14"
